# sudokusat

./: .gitignore  CMakeLists.txt  README.md  doc_compile.sh
data/: hard.txt  invalid_sudoku.txt  sudoku.txt  test.txt  test2.txt  test3.txt  test4.txt
doc/: concept.tex
include/: cnf.h  dpll.h  sat.h  sudoku.h  sudoku_cnf.h
src/: cnf.c  dpll.c  main.c  sat.c  sudoku.c  sudoku_cnf.c
test/: sudoku_test.c  test_cnf.c  test_dpll.c  test_sudoku.c  test_sudoku_cnf.c
